# Devm

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
agents/: backend-expert.md  debug-expert.md  frontend-expert.md  planner.md  security-reviewer.md
config/: agents.json  profiles.json  safe-commands.json
config/schemas/: agents.schema.json  profiles.schema.json
devmanager/: __init__.py  __main__.py  _bg_worker.py  a2a.py  adk_agent.py  adk_tools.py  agent_bridge.py  agent_config.py  cli.py  consult.py  context.py  council.py  doctor.py  ecc.py  edit_mode.py  gui_bridge.py  handoff.py  interactive.py  jobs.py  llm.py  ollama.py  patch.py  repair.py  repl.py  router.py  safe_runner.py  solver.py  state.py  token_tracker.py  user_config.py
docs/: ADK-BRIDGE.md  CONFIGURATION.md  LOCAL-GLM-SETUP.md
examples/: backend-docker-task.txt
scripts/: bootstrap.sh  check-glm.sh  install-devm.sh  smoke-test.sh  validate-config.py
skills/api-design/: SKILL.md
skills/backend-patterns/: SKILL.md
skills/continuous-learning/: SKILL.md
skills/debugging-patterns/: SKILL.md
skills/docker-patterns/: SKILL.md
skills/frontend-patterns/: SKILL.md
skills/payment-integration/: SKILL.md
skills/security-review/: SKILL.md
skills/tdd-workflow/: SKILL.md
skills/verification-loop/: SKILL.md
