[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devmanager"
version = "0.1.0"
description = "Local AI dev routing + multi-agent council — agents talk to each other via @mentions"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "developer-tools", "google-adk", "ollama", "llm", "agent", "routing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
]

dependencies = [
    # Core — no paid API keys needed
    # Ollama runs locally; google-adk is optional (only needed with --adk flag)
]

[project.optional-dependencies]
adk = [
    "google-adk>=0.5.0",
    "litellm>=1.40.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
devm = "devmanager.cli:main"

[project.urls]
Homepage = "https://github.com/kamalnyan/Devm"
Issues = "https://github.com/kamalnyan/Devm/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["devmanager*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
